# substrate-erc20-pallet

./: Cargo.toml  README.md  SPEC.md  check.sh
pallets/template/: Cargo.toml
pallets/template/src/: extra_mutator.rs  functions.rs  lib.rs  types.rs  weights.rs
runtime/src/: lib.rs
