[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'Substrate FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-template'
publish = false
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0-monthly-2021-08'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']


[dependencies]
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false }
sp-std = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-08' }
# Needed for various traits. In our case, `OnFinalize`.
sp-runtime = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-08' }
# Needed for type-safe access to storage DB.
frame-support = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-08' }
# `system` module provides us with all sorts of useful stuff and macros depend on it being around.
frame-system = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-08' }
frame-benchmarking = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-08', optional = true }

[dev-dependencies]
sp-core = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-08' }
sp-std = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-08' }
sp-io = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-08' }
pallet-balances = { version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-08' }

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'sp-runtime/runtime-benchmarks',
    'frame-system/runtime-benchmarks',
]
std = [
    'codec/std',
    'sp-std/std',
    'sp-runtime/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
]
try-runtime = ['frame-support/try-runtime']
